tests/baselines/reference/initializerReferencingConstructorParameters.errors.txt
initializerReferencingConstructorParameters.ts(4,9): error TS2304: Cannot find name 'x'.
initializerReferencingConstructorParameters.ts(5,15): error TS2304: Cannot find name 'x'.
initializerReferencingConstructorParameters.ts(10,9): error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?
initializerReferencingConstructorParameters.ts(11,15): error TS2304: Cannot find name 'x'.
initializerReferencingConstructorParameters.ts(16,14): error TS2729: Property 'x' is used before its initialization.
initializerReferencingConstructorParameters.ts(22,14): error TS2729: Property 'x' is used before its initialization.
initializerReferencingConstructorParameters.ts(23,9): error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?


==== initializerReferencingConstructorParameters.ts (7 errors) ====
    // Initializer expressions for instance member variables are evaluated in the scope of the class constructor body but are not permitted to reference parameters or local variables of the constructor. 
    
    class C {
        a = x; // error
            ~
!!! error TS2304: Cannot find name 'x'.
        b: typeof x; // error
                  ~
!!! error TS2304: Cannot find name 'x'.
        constructor(x) { }
    }
    
    class D {
        a = x; // error
            ~
!!! error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?
        b: typeof x; // error
                  ~
!!! error TS2304: Cannot find name 'x'.
        constructor(public x) { }
    }
    
    class E {
        a = this.x; // ok
                 ~
!!! error TS2729: Property 'x' is used before its initialization.
!!! related TS2728 initializerReferencingConstructorParameters.ts:18:17: 'x' is declared here.
        b: typeof this.x; // ok
        constructor(public x) { }
    }
    
    class F<T> {
        a = this.x; // ok
                 ~
!!! error TS2729: Property 'x' is used before its initialization.
!!! related TS2728 initializerReferencingConstructorParameters.ts:24:17: 'x' is declared here.
        b = x; // error
            ~
!!! error TS2663: Cannot find name 'x'. Did you mean the instance member 'this.x'?
        constructor(public x: T) { }
    }